# learnbotc

src/learning_robot/: CMakeLists.txt  package.xml
src/learning_robot/LearningRobot/: model.config  model.sdf
src/learning_robot/depth_camera_mini/: model.config  model.sdf
src/learning_robot/world/: learn.world
src/robot_diff_description/: CMakeLists.txt  package.xml
src/robot_diff_description/launch/: robot_diff.rviz  robot_diff_rviz.launch
src/robot_diff_description/meshes/: Lidar1.stl  Lidar2.stl  Lidar3.stl
src/robot_diff_description/urdf/: robot_diff.urdf
src/robot_diff_gazebo/: CMakeLists.txt  package.xml
src/robot_diff_gazebo/launch/: gazebo.launch
src/velodyne_rotational_control/: CMakeLists.txt  package.xml
src/velodyne_rotational_control/include/velodyne_rotational_control/: DiffDrivePlugin.h
src/velodyne_rotational_control/src/: DiffDrivePlugin.cpp
